crates/theoremc-macros/tests/expand/invalid_theorem.stderr
error: schema.validation_failure | tests/expand/invalid_theorem.theorem:3:8 | About must be non-empty after trimming
 --> tests/expand/invalid_theorem.rs:1:32
  |
1 | theoremc_macros::theorem_file!("tests/expand/invalid_theorem.theorem");
  |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
