crates/theoremc-macros/tests/expand/invalid_theorem.rs
theoremc_macros::theorem_file!("tests/expand/invalid_theorem.theorem");

fn main() {}
